--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+    <link rel="stylesheet" href="css/application.css" />
     <!-- libraries -->
     <script src="lib/jquery-1.12.4.min.js"></script>
     <script src="lib/jquery.mobile-1.4.5.min.js"></script>
@@ -37,8 +38,14 @@
     <!-- main -->
     <div role="main" class="ui-content no-top" data-iscroll>
       <div class="homepage-section-top">
-        <h3>Content Goes Here</h3>
+        <h3>Main Screen</h3>
       </div>
+    </div>
+    <!-- footer -->
+    <div data-role="footer" data-position="fixed" data-tap-toggle="false">
+      <h1></h1>
+      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-carat-l">Back</a>
+      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-right ui-btn-icon-right ui-icon-carat-r">Next</a>
     </div>
   </div>
 
