--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
     <script src="lib/fastclick.min.js"></script>
     <!-- app-related scripts -->
     <script src="js/app.js"></script>
+    <script src="js/page1a.js"></script>
   </head>
   <body>
 
@@ -57,7 +58,7 @@
       <h3>Connect To Device</h3>
       <input type="button" value="Scan"/>
       <br/>
-      <ul data-role="listview">
+      <ul data-role="listview" id="devices-list">
         <li><a href="#">
           <h4>Placeholder Broadcast</h4>
           <p>DE:AD:BE:EF</p>
