--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
     <!-- app-related scripts -->
     <script src="js/app.js"></script>
     <script src="js/page1a.js"></script>
+    <script src="js/page1b.js"></script>
   </head>
   <body>
 
@@ -56,17 +57,9 @@
     <!-- main -->
     <div role="main" class="ui-content no-top" data-iscroll>
       <h3>Connect To Device</h3>
-      <input type="button" value="Scan"/>
+      <input id="devices-scan" type="button" value="Scan"/>
       <br/>
       <ul data-role="listview" id="devices-list">
-        <li><a href="#">
-          <h4>Placeholder Broadcast</h4>
-          <p>DE:AD:BE:EF</p>
-        </a></li>
-        <li><a href="#">
-          <h4>Placeholder Broadcast</h4>
-          <p>DE:AD:BE:EF</p>
-        </a></li>
       </ul>
     </div>
     <!-- footer -->
@@ -88,13 +81,13 @@
       <h3>Device Info</h3>
       <div class="ui-grid-a">
         <div class="ui-block-a"><div class="ui-body ui-body-a">Device Name</div></div>
-        <div class="ui-block-b"><div id="device-name" class="ui-body ui-body-a">Foo</div></div>
+        <div class="ui-block-b"><div id="device-name" class="ui-body ui-body-a">--</div></div>
         <div class="ui-block-a"><div class="ui-body ui-body-a">Hardware Version</div></div>
-        <div class="ui-block-b"><div id="device-hw" class="ui-body ui-body-a">Foo</div></div>
+        <div class="ui-block-b"><div id="device-hw" class="ui-body ui-body-a">--</div></div>
         <div class="ui-block-a"><div class="ui-body ui-body-a">Firmware Version</div></div>
-        <div class="ui-block-b"><div id="device-fw" class="ui-body ui-body-a">Foo</div></div>
+        <div class="ui-block-b"><div id="device-fw" class="ui-body ui-body-a">--</div></div>
         <div class="ui-block-a"><div class="ui-body ui-body-a">Serial Number</div></div>
-        <div class="ui-block-b"><div id="device-serial" class="ui-body ui-body-a">Foo</div></div>
+        <div class="ui-block-b"><div id="device-serial" class="ui-body ui-body-a">--</div></div>
       </div>
     </div>
     <!-- footer -->
