Set and display network info

--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
     <script src="js/page1a.js"></script>
     <script src="js/page1b.js"></script>
     <script src="js/page2a.js"></script>
+    <script src="js/page2b.js"></script>
   </head>
   <body>
 
@@ -132,13 +133,13 @@
       <h3>WiFi Info</h3>
       <div class="ui-grid-a">
         <div class="ui-block-a"><div class="ui-body ui-body-a">Network Name</div></div>
-        <div class="ui-block-b"><div id="network-name" class="ui-body ui-body-a">Foo</div></div>
+        <div class="ui-block-b"><div id="network-name" class="ui-body ui-body-a">--</div></div>
         <div class="ui-block-a"><div class="ui-body ui-body-a">Status</div></div>
-        <div class="ui-block-b"><div id="network-status" class="ui-body ui-body-a">Connected</div></div>
+        <div class="ui-block-b"><div id="network-status" class="ui-body ui-body-a">--</div></div>
         <div class="ui-block-a"><div class="ui-body ui-body-a">IP Address</div></div>
-        <div class="ui-block-b"><div id="network-ip" class="ui-body ui-body-a">Foo</div></div>
+        <div class="ui-block-b"><div id="network-ip" class="ui-body ui-body-a">--</div></div>
         <div class="ui-block-a"><div class="ui-body ui-body-a">MAC Address</div></div>
-        <div class="ui-block-b"><div id="network-mac" class="ui-body ui-body-a">Foo</div></div>
+        <div class="ui-block-b"><div id="network-mac" class="ui-body ui-body-a">--</div></div>
       </div>
       <input type="button" value="Remove Network"/>
     </div>
