--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
     <script src="lib/fastclick.min.js"></script>
     <!-- app-related scripts -->
     <script src="js/app.js"></script>
+    <script src="js/application_interface.js"></script>
     <script src="js/page1a.js"></script>
     <script src="js/page1b.js"></script>
     <script src="js/page2a.js"></script>
