--- a/web/index.html
+++ b/web/index.html
@@ -143,7 +143,7 @@
         <div class="ui-block-a"><div class="ui-body ui-body-a">MAC Address</div></div>
         <div class="ui-block-b"><div id="network-mac" class="ui-body ui-body-a">--</div></div>
       </div>
-      <input type="button" value="Remove Network"/>
+      <input type="button" id="network-remove" value="Remove Network"/>
     </div>
     <!-- footer -->
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
