--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
     <!-- app-related scripts -->
     <script src="js/app.js"></script>
     <script src="js/application_interface.js"></script>
+    <script src="js/esdr_interface.js"></script>
     <script src="js/page1a.js"></script>
     <script src="js/page1b.js"></script>
     <script src="js/page2a.js"></script>
