Added more esdr requests; note addition of secrets.js file (not tracked by git) for storing product ID and secret tokens

--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
     <script src="lib/jquery.mobile-1.4.5.min.js"></script>
     <script src="lib/fastclick.min.js"></script>
     <!-- app-related scripts -->
+    <script src="js/secrets.js"></script>
     <script src="js/app.js"></script>
     <script src="js/application_interface.js"></script>
     <script src="js/esdr_interface.js"></script>
@@ -20,6 +21,7 @@
     <script src="js/page2a.js"></script>
     <script src="js/page2b.js"></script>
     <script src="js/page3a.js"></script>
+    <script src="js/page3b.js"></script>
   </head>
   <body>
 
@@ -203,7 +205,7 @@
         </select>
       </div>
       <!-- TODO isPublic? isMobile? -->
-      <input type="button" value="Submit"/>
+      <input id="submit-feed" type="button" value="Submit"/>
     </div>
     <!-- footer -->
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
