web: populate summary page

--- a/web/index.html
+++ b/web/index.html
@@ -221,7 +221,36 @@
     <!-- main -->
     <div role="main" class="ui-content no-top" data-iscroll>
       <div class="homepage-section-top">
-        <h3>Display All Info Here</h3>
+        <p>Congratulations! You are all set! Here's a summary of your device info below:</p>
+        <h3>Device Info</h3>
+        <div class="ui-grid-a">
+          <div class="ui-block-a"><div class="ui-body ui-body-a">Device Name</div></div>
+          <div class="ui-block-b"><div id="page4-device-name" class="ui-body ui-body-a">--</div></div>
+          <div class="ui-block-a"><div class="ui-body ui-body-a">Hardware Version</div></div>
+          <div class="ui-block-b"><div id="page4-device-hw" class="ui-body ui-body-a">--</div></div>
+          <div class="ui-block-a"><div class="ui-body ui-body-a">Firmware Version</div></div>
+          <div class="ui-block-b"><div id="page4-device-fw" class="ui-body ui-body-a">--</div></div>
+          <div class="ui-block-a"><div class="ui-body ui-body-a">Serial Number</div></div>
+          <div class="ui-block-b"><div id="page4-device-serial" class="ui-body ui-body-a">--</div></div>
+        </div>
+        <h3>WiFi Info</h3>
+        <div class="ui-grid-a">
+          <div class="ui-block-a"><div class="ui-body ui-body-a">Network Name</div></div>
+          <div class="ui-block-b"><div id="page4-network-name" class="ui-body ui-body-a">--</div></div>
+          <div class="ui-block-a"><div class="ui-body ui-body-a">Status</div></div>
+          <div class="ui-block-b"><div id="page4-network-status" class="ui-body ui-body-a">--</div></div>
+          <div class="ui-block-a"><div class="ui-body ui-body-a">IP Address</div></div>
+          <div class="ui-block-b"><div id="page4-network-ip" class="ui-body ui-body-a">--</div></div>
+          <div class="ui-block-a"><div class="ui-body ui-body-a">MAC Address</div></div>
+          <div class="ui-block-b"><div id="page4-network-mac" class="ui-body ui-body-a">--</div></div>
+        </div>
+        <h3>ESDR Info</h3>
+        <div class="ui-grid-a">
+          <div class="ui-block-a"><div class="ui-body ui-body-a">Feed Name</div></div>
+          <div class="ui-block-b"><div id="page4-feed-name" class="ui-body ui-body-a">--</div></div>
+            <div class="ui-block-a"><div class="ui-body ui-body-a">Exposure</div></div>
+            <div class="ui-block-b"><div id="page4-feed-exposure" class="ui-body ui-body-a">--</div></div>
+        </div>
       </div>
     </div>
   </div>
