Clear/Remove feed key

--- a/web/index.html
+++ b/web/index.html
@@ -251,6 +251,7 @@
             <div class="ui-block-a"><div class="ui-body ui-body-a">Exposure</div></div>
             <div class="ui-block-b"><div id="page4-feed-exposure" class="ui-body ui-body-a">--</div></div>
         </div>
+        <input id="button-feed-key-remove" type="button" value="Remove Feed Key"/>
       </div>
     </div>
   </div>
