--- a/web/index.html
+++ b/web/index.html
@@ -248,8 +248,10 @@
         <div class="ui-grid-a">
           <div class="ui-block-a"><div class="ui-body ui-body-a">Feed Name</div></div>
           <div class="ui-block-b"><div id="page4-feed-name" class="ui-body ui-body-a">--</div></div>
-            <div class="ui-block-a"><div class="ui-body ui-body-a">Exposure</div></div>
-            <div class="ui-block-b"><div id="page4-feed-exposure" class="ui-body ui-body-a">--</div></div>
+          <div class="ui-block-a"><div class="ui-body ui-body-a">Exposure</div></div>
+          <div class="ui-block-b"><div id="page4-feed-exposure" class="ui-body ui-body-a">--</div></div>
+          <div class="ui-block-a"><div class="ui-body ui-body-a">Feed Key</div></div>
+          <div class="ui-block-b"><div id="page4-feed-key" class="ui-body ui-body-a">--</div></div>
         </div>
         <input id="button-feed-key-remove" type="button" value="Remove Feed Key"/>
       </div>
