Manually specify a wifi network to join.

--- a/web/index.html
+++ b/web/index.html
@@ -105,6 +105,8 @@
       <br/>
       <ul data-role="listview" id="networks-list">
       </ul>
+      <br/>
+      <h4>or <a href="" onclick="Page2A.onClickAddNetwork()">Add network</a></h4>
     </div>
     <!-- footer -->
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
