Change title (from ESDR to Speck Sensor) and include signup/pw reset links; applications should override http/https.

--- a/web/index.html
+++ b/web/index.html
@@ -153,7 +153,8 @@
     </div>
     <!-- main -->
     <div role="main" class="ui-content no-top" data-iscroll>
-      <h3>ESDR Login</h3>
+      <h3>Speck Sensor Login</h3>
+      <p>Need an account? <a href="https://www.specksensor.com/signup" target="_blank">Sign up!</a></p>
       <div class="ui-field-contain">
         <label for="name">Username:</label>
         <input data-clear-btn="true" name="username" id="esdr-username" value="" autocomplete="off"/>
@@ -163,6 +164,7 @@
         <input type="password" data-clear-btn="true" name="password" id="esdr-password" value="" autocomplete="off"/>
       </div>
       <input type="button" id="esdr-login" value="Login"/>
+      <p><a href="https://www.specksensor.com/password-reset" target="_blank">Forgot your password?</a></p>
     </div>
     <!-- footer -->
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
