Added button for requesting feed key

--- a/web/index.html
+++ b/web/index.html
@@ -83,6 +83,13 @@
         <div class="ui-block-a"><div class="ui-body ui-body-a">Serial Number</div></div>
         <div class="ui-block-b"><div id="device-serial" class="ui-body ui-body-a">--</div></div>
       </div>
+      <br/>
+      <h3>Feed Key Info</h3>
+      <div class="ui-grid-a">
+        <div class="ui-block-a"><div class="ui-body ui-body-a">Feed Key</div></div>
+        <div class="ui-block-b"><div id="device-feedkey" class="ui-body ui-body-a">--</div></div>
+      </div>
+      <input type="button" id="request-feedkey" value="Request Feed Key"/>
     </div>
     <!-- footer -->
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
