--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,9 @@
     <script src="js/page2b.js"></script>
     <script src="js/page3a.js"></script>
     <script src="js/page3b.js"></script>
+    <script src="js/page3_device_new.js"></script>
+    <script src="js/page3_feeds_index.js"></script>
+    <script src="js/page3_feeds_new.js"></script>
     <script src="js/page4.js"></script>
   </head>
   <body>
@@ -177,7 +180,7 @@
   </div>
 
 
-  <div data-role="page" id="pageDeviceNew">
+  <div data-role="page" id="page3DeviceNew">
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <h1>Honeybee</h1>
@@ -199,7 +202,7 @@
   </div>
 
 
-  <div data-role="page" id="pageFeedsIndex">
+  <div data-role="page" id="page3FeedsIndex">
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <h1>Honeybee</h1>
@@ -230,7 +233,7 @@
   </div>
 
 
-  <div data-role="page" id="pageFeedsNew">
+  <div data-role="page" id="page3FeedsNew">
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <h1>Honeybee</h1>
@@ -255,7 +258,7 @@
     <!-- footer -->
     <div data-role="footer" data-position="fixed" data-tap-toggle="false">
       <h1></h1>
-      <a href="#pageFeedsIndex" class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-carat-l">Back</a>
+      <a href="#page3FeedsIndex" class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-carat-l">Back</a>
     </div>
   </div>
 
