Create devices/feeds pages

--- a/web/index.html
+++ b/web/index.html
@@ -247,7 +247,7 @@
       </div>
       <div class="ui-field-contain">
         <label for="feed-exposure">Exposure:</label>
-        <select name="feed-exposure" id="feed_exposure">
+        <select name="feed-exposure" id="new_feed_exposure">
           <option value="indoor">Indoor</option>
           <option value="outdoor">Outdoor</option>
           <option value="virtual">Virtual</option>
