Lists all feeds for a given device, then set feed key to desired feed.

--- a/web/index.html
+++ b/web/index.html
@@ -209,20 +209,19 @@
     </div>
     <!-- main -->
     <div role="main" class="ui-content no-top" data-iscroll>
-      <h3 id="page-feeds-index-title">Feeds for DEVICE_NAME</h3>
+      <h3 id="page-feeds-index-title">Feeds</h3>
       <div id="feeds-exist">
         <div class="ui-field-contain">
           <label for="feed-select">Select:</label>
           <select name="feed-select" id="feed_select">
-            <option value="1">Feed Name</option>
           </select>
         </div>
-        <input id="submit-feed" type="button" value="Choose"/>
+        <input id="choose-feed" type="button" value="Choose"/>
       </div>
       <br/>
       <div class="ui-field-contain">
         <label id="label-for-feed-create" for="feed-create">or:</label>
-        <input id="feed-create" type="button" value="Create New Feed"/>
+        <a href="#page3FeedsNew" class="ui-btn ui-corner-all ui-icon-carat-r">Create New Feed</a>
       </div>
     </div>
     <!-- footer -->
