Include protocol in UI; modify for creating new device (to check for product name)

--- a/web/index.html
+++ b/web/index.html
@@ -87,6 +87,8 @@
         <div class="ui-block-b"><div id="device-serial" class="ui-body ui-body-a">--</div></div>
         <div class="ui-block-a"><div class="ui-body ui-body-a">Feed Key</div></div>
         <div class="ui-block-b"><div id="device-feedkey" class="ui-body ui-body-a">--</div></div>
+        <div class="ui-block-a"><div class="ui-body ui-body-a">Protocol</div></div>
+        <div class="ui-block-b"><div id="device-protocol" class="ui-body ui-body-a">--</div></div>
       </div>
     </div>
     <!-- footer -->
